# rust-web-app

./: Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
examples/: quick_dev.rs
src/: error.rs  main.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: error.rs  mod.rs
src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
web-folder/: index.html
