[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
async-trait = "0.1"
lazy-regex = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.10"
